# NBody

./: CMakeLists.txt  imgui.ini
include/glad/: glad.h
src/: Particle.cpp  Particle.h  Renderer.cpp  Renderer.h  Simulation.cpp  Simulation.h  glad.c  main.cpp
src/shaders/: nbody.frag  nbody.vert
